[package]
name = "redb_wallet_storage"
version = "0.1.1"
edition = "2021"
description = "A redb storage backend for Bitcoin Development Kit wallets"
authors = ["Dikshant <dikshant.073@gmail.com>"]
repository = "https://github.com/pingu-73/redb_wallet_storage"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bitcoin", "wallet", "database", "redb"]
categories = ["database", "cryptography::cryptocurrencies"]

[dependencies]
bdk_wallet = "1.1.0"
redb = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.32.0"
bdk_chain = "0.21.1"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
bdk_esplora = { version = "0.20.1", features = ["blocking"] }
miniscript = { version = "12.3.1", features = [ "serde" ], default-features = false }
assert_matches = "1.5.0"
rand = "^0.8"
bdk_file_store = { version = "0.18.1" }
bdk_chain = { version = "0.21.1", features = ["rusqlite"] }
bdk_wallet = { version = "1.1.0", features = ["rusqlite", "file_store"] }

[[example]]
name = "wallet_esplora_blocking"
path = "examples/wallet_esplora_blocking/main.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage/main.rs"
